// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match custom icon 1`] = `
<DocumentFragment>
  <div
    class="nut-badge"
  >
    <div
      class="nut-badge-content nut-badge-icon"
      style="top: 0px; right: 0px;"
    >
      <svg
        class="nut-icon nut-icon-Check "
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.24 35.89 7.12 21.13c-.37-.41-1-.45-1.42-.09l-.74.67c-.41.37-.45 1-.09 1.41l14.34 16.13c.63.71 1.75.66 2.32-.1l21.65-28.7c.33-.44.24-1.07-.2-1.4l-.8-.6a.994.994 0 0 0-1.4.2z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="nut-badge"
  >
    <div
      class="nut-badge-sup nut-badge-number"
      style="top: 0px; right: 0px;"
    >
      8
    </div>
  </div>
</DocumentFragment>
`;
